--- a/src/pages/home/fashionGrid/_fashion-grid.scss
+++ b/src/pages/home/fashionGrid/_fashion-grid.scss
@@ -7,6 +7,11 @@
 
   .grid-flex {
     display: flex;
+
+    @include max-size($large) {
+      grid-column: span 2;
+      min-height: rem(380px);
+    }
   }
 
   .fashion-grid-item {
@@ -35,7 +40,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    max-width: 400px;
+    max-width: rem(400px);
   }
 
   .grid-item-1 {
@@ -43,7 +48,12 @@
     background-color: $color-light-gray;
     background-image: url('/images/home/sale.png');
     background-size: contain;
-    min-height: 760px;
+    min-height: rem(760px);
+
+    @include max-size($large) {
+      grid-row: span 1;
+      min-height: rem(380px);
+    }
 
     .fashion-grid-text {
       justify-content: center;
@@ -57,14 +67,19 @@
   }
 
   .grid-item-2 {
-    background-image: url('/images/home/men.jpg');
+    background-image: url('/images/home/men1.jpg');
     background-size: cover;
+    background-color: #f3f6f7;
+
+    @include max-size($large) {
+      background-size: contain;
+    }
   }
 
   .grid-item-3 {
     background-color: #faf0ef;
     background-image: url('/images/home/women.png');
-    background-size: 280px;
+    background-size: 250px;
     background-position-y: bottom;
 
     .fashion-grid-text {
