--- a/src/pages/home/fashionGrid/_fashion-grid.scss
+++ b/src/pages/home/fashionGrid/_fashion-grid.scss
@@ -67,13 +67,10 @@
   }
 
   .grid-item-2 {
-    background-image: url('/images/home/men1.jpg');
-    background-size: cover;
-    background-color: #f3f6f7;
-
-    @include max-size($large) {
-      background-size: contain;
-    }
+    background-image: url('/images/home/men.png');
+    background-size: contain;
+    background-position-y: bottom;
+    background-color: #d6dcda;
   }
 
   .grid-item-3 {
@@ -81,6 +78,10 @@
     background-image: url('/images/home/women.png');
     background-size: 250px;
     background-position-y: bottom;
+
+    @include max-size($large) {
+      background-size: contain;
+    }
 
     .fashion-grid-text {
       max-width: rem(212px);
@@ -99,5 +100,9 @@
     background-image: url('/images/home/kids.jpg');
     background-size: cover;
     background-color: #e1e1e1;
+
+    @include max-size($large) {
+      background-size: contain;
+    }
   }
 }
