--- a/src/pages/home/_hero.scss
+++ b/src/pages/home/_hero.scss
@@ -6,8 +6,14 @@
   background-size: cover;
   background-repeat: no-repeat;
   height: rem(372px);
+  padding: 40px;
   padding-left: 130px;
   margin-bottom: 32px;
+
+  @include max-size($large) {
+    padding-left: 40px;
+    height: auto;
+  }
 
   h1 {
     font-family: $font-primary;
@@ -15,10 +21,6 @@
     &::after {
       display: none;
     }
-  }
-
-  @include max-size($large) {
-    height: auto;
   }
 
   .hero-content {
@@ -29,6 +31,10 @@
     width: 100%;
     max-width: rem(640px);
     height: 100%;
+
+    @include max-size($large) {
+      max-width: rem(448px);
+    }
   }
 
   .hero-title {
