--- a/src/pages/home/fashionGrid/_fashion-grid.scss
+++ b/src/pages/home/fashionGrid/_fashion-grid.scss
@@ -4,13 +4,29 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto auto;
+  gap: 32px;
+
+  @include max-size($medium) {
+    gap: 20px;
+    grid-template-columns: 1fr;
+  }
 
   .grid-flex {
     display: flex;
+    gap: 32px;
 
     @include max-size($large) {
       grid-column: span 2;
       min-height: rem(380px);
+    }
+
+    @include max-size($medium) {
+      grid-column: span 1;
+      gap: 20px;
+    }
+
+    @include max-size($small) {
+      flex-direction: column;
     }
   }
 
@@ -20,6 +36,18 @@
     background-repeat: no-repeat;
     width: 100%;
     padding: 28px;
+
+    @include max-size($medium) {
+      min-height: rem(412px);
+    }
+
+    @include max-size($small) {
+      min-height: rem(363px);
+    }
+
+    &.grid-item-2 {
+      justify-content: flex-start;
+    }
 
     h2 {
       font-size: $font-large;
@@ -51,8 +79,18 @@
     min-height: rem(760px);
 
     @include max-size($large) {
+      min-height: rem(332px);
       grid-row: span 1;
-      min-height: rem(380px);
+      min-width: rem(600px);
+    }
+
+    @include max-size($medium) {
+      min-height: rem(668px);
+      min-width: 100%;
+    }
+
+    @include max-size($small) {
+      min-height: auto;
     }
 
     .fashion-grid-text {
@@ -69,7 +107,7 @@
   .grid-item-2 {
     background-image: url('/images/home/men.png');
     background-size: contain;
-    background-position-y: bottom;
+    background-position: right bottom;
     background-color: #d6dcda;
   }
 
@@ -83,9 +121,17 @@
       background-size: contain;
     }
 
+    @include max-size($small) {
+      background-size: 250px;
+    }
+
     .fashion-grid-text {
       max-width: rem(212px);
       padding-top: 20px;
+
+      @include max-size($medium) {
+        padding-top: 0;
+      }
     }
 
     .more-link {
@@ -100,6 +146,12 @@
     background-image: url('/images/home/kids.jpg');
     background-size: cover;
     background-color: #e1e1e1;
+
+    .fashion-grid-text {
+      @include max-size($medium) {
+        max-width: rem(252px);
+      }
+    }
 
     @include max-size($large) {
       background-size: contain;
