--- a/src/adminLayout/aside/_aside.scss
+++ b/src/adminLayout/aside/_aside.scss
@@ -22,7 +22,23 @@
     .nav-text {
       opacity: 0;
       width: 0;
+      height: 0;
       overflow: hidden;
+    }
+  }
+
+  .user-container {
+    .user-text {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .user {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      padding: 20px;
+      border-top: 1px solid $color-border;
     }
   }
 }
