--- a/src/pages/home/_hero.scss
+++ b/src/pages/home/_hero.scss
@@ -1,5 +1,9 @@
 @use '../../scss/globals' as *;
 
+.container:has(.hero) {
+  padding: 0 20px;
+}
+
 .hero {
   background-color: $color-light-gray;
   background-image: url('/images/fashion_fusion_banner.png');
