--- a/src/pages/collections/_collection-page.scss
+++ b/src/pages/collections/_collection-page.scss
@@ -8,6 +8,10 @@
   gap: 24px;
   margin-top: 32px;
 
+  @include max-size($small) {
+    grid-template-columns: 1fr;
+  }
+
   .collections-item {
     background: $color-background;
     width: 100%;
@@ -16,24 +20,48 @@
     padding: 20px;
     justify-content: space-between;
 
+    @include max-size($small) {
+      flex-direction: column;
+      gap: 12px;
+      align-items: initial;
+    }
+
     .collections-content {
       min-width: rem(200px);
       position: relative;
       left: 40px;
+
+      @include max-size($large) {
+        position: static;
+      }
+    }
+
+    .collections-img-container {
+      display: flex;
+      gap: 20px;
+      justify-content: center;
+      overflow: auto;
     }
 
     &:last-child {
       grid-column: span 2;
 
+      @include max-size($small) {
+        grid-column: span 1;
+      }
+
       .collections-content {
         order: 2;
         left: auto;
         right: 20%;
+
+        @include max-size($small) {
+          order: initial;
+        }
       }
 
       .collections-img-container {
-        display: flex;
-        gap: 20px;
+        justify-content: inherit;
       }
     }
   }
@@ -46,6 +74,6 @@
   }
 
   .collections-img {
-    width: 200px;
+    width: rem(200px);
   }
 }
