--- a/src/layout/nav/subNav/_sub-menu.scss
+++ b/src/layout/nav/subNav/_sub-menu.scss
@@ -1,30 +1,79 @@
 @use '../../../scss/globals' as *;
 
 .sub-menu-container {
-  gap: 30px;
   box-shadow: $box-shadow;
   position: absolute;
   width: 100%;
   z-index: 2;
   top: 54px;
   left: 0;
-  padding: 20px;
   background-color: $color-white;
   display: flex;
   justify-content: center;
 
   .sub-menu {
+    position: relative;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 12px;
+  }
+
+  .link-heading {
+    margin-top: 60px;
+    margin-bottom: 8px;
+    font-size: rem(24px);
+  }
+
+  .link-text {
+    flex-grow: 1;
+    max-width: rem(300px);
+  }
+
+  .nav-link {
+    display: flex;
+    justify-content: flex-end;
+
+    .btn {
+      max-width: fit-content;
+      min-height: 20px;
+      padding: 12px 28px;
+    }
+  }
+
+  .menu-item {
+    display: flex;
+    flex-direction: column;
+    color: inherit;
+    padding: 12px 24px;
+
+    p {
+      margin: 0;
+    }
+
+    &.img-item {
+      flex-direction: row;
+      align-items: center;
+      gap: 28px;
+    }
+
+    img {
+      max-width: 252px;
+    }
+
+    &:nth-child(3) {
+      background-color: $color-light-gray-30;
+    }
+
+    &:last-child {
+      background-color: $color-gray-20;
+    }
   }
 }
 
-.menu-ad {
-  display: flex;
-  background-color: #f9f9f9;
-
-  img {
-    max-width: rem(200px);
-  }
+.grid-line {
+  grid-column: 2 / 5;
+  height: 4px;
+  background-color: $color-gray-80;
+  width: 96%;
+  position: absolute;
+  top: 28px;
 }
