--- a/src/layout/nav/subNav/_sub-nav.scss
+++ b/src/layout/nav/subNav/_sub-nav.scss
@@ -1,45 +1,23 @@
 @use '../../../scss/globals' as *;
 
-.sub-menu-container {
+.sub-nav-container {
   box-shadow: $box-shadow;
   position: absolute;
   width: 100%;
   z-index: 2;
-  top: 54px;
+  top: 60px;
   left: 0;
   background-color: $color-white;
-  display: flex;
   justify-content: center;
+  display: none;
 
-  .sub-menu {
+  .sub-nav {
     position: relative;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
   }
 
-  .link-heading {
-    margin-top: 60px;
-    margin-bottom: 8px;
-    font-size: rem(24px);
-  }
-
-  .link-text {
-    flex-grow: 1;
-    max-width: rem(300px);
-  }
-
-  .nav-link {
-    display: flex;
-    justify-content: flex-end;
-
-    .btn {
-      max-width: fit-content;
-      min-height: 20px;
-      padding: 12px 28px;
-    }
-  }
-
-  .menu-item {
+  .sub-nav-item {
     display: flex;
     flex-direction: column;
     padding: 12px 24px;
@@ -55,7 +33,7 @@
     }
 
     img {
-      max-width: 252px;
+      max-width: rem(252px);
     }
 
     &:nth-child(3) {
@@ -66,13 +44,44 @@
       background-color: $color-gray-20;
     }
   }
+
+  .sub-nav-heading {
+    margin-top: 60px;
+    margin-bottom: 8px;
+    font-size: rem(24px);
+  }
+
+  .sub-nav-text {
+    flex-grow: 1;
+    max-width: rem(300px);
+  }
+
+  .sub-nav-link {
+    display: flex;
+    justify-content: flex-end;
+
+    .btn {
+      max-width: fit-content;
+      min-height: 20px;
+      padding: 12px 28px;
+    }
+  }
 }
 
-.grid-line {
+.top-line {
   grid-column: 2 / 5;
   height: 4px;
   background-color: $color-gray-80;
   width: 96%;
   position: absolute;
   top: 28px;
+}
+
+.has-sub-nav {
+  &:hover,
+  &:focus-within {
+    .sub-nav-container {
+      display: flex;
+    }
+  }
 }
