--- a/src/layout/nav/subNav/_sub-nav.scss
+++ b/src/layout/nav/subNav/_sub-nav.scss
@@ -9,7 +9,7 @@
   left: 0;
   background-color: $color-white;
   justify-content: center;
-  display: flex;
+  display: none;
 
   .sub-nav {
     position: relative;
