--- a/src/layout/nav/subNav/_sub-nav.scss
+++ b/src/layout/nav/subNav/_sub-nav.scss
@@ -33,14 +33,18 @@
     }
   }
 
+  .sub-nav-content {
+    padding: 32px;
+    padding-top: 60px;
+  }
+
   .sub-nav-item {
     display: flex;
     flex-direction: column;
-    padding: 24px;
 
     p {
       margin: 0;
-      margin-top: 12px;
+      margin-top: 8px;
     }
 
     &.sub-nav-ad {
@@ -71,6 +75,7 @@
   .sub-nav-link {
     display: flex;
     justify-content: flex-end;
+    padding: 16px;
 
     .btn {
       max-width: fit-content;
