--- a/src/layout/nav/_nav.scss
+++ b/src/layout/nav/_nav.scss
@@ -6,13 +6,23 @@
 
   @include max-size($small) {
     flex-direction: column;
-    gap: 32px;
-    padding: 30px;
+    gap: 0;
+
+    a {
+      color: inherit;
+      font-size: rem(16px);
+      display: flex;
+      width: 100%;
+    }
   }
 
   .nav-item {
     text-transform: uppercase;
     padding: 8px;
+
+    @include max-size($small) {
+      padding: 12px 20px;
+    }
 
     &:focus-visible {
       @include outline;
@@ -23,6 +33,10 @@
       color: $color-gray-70;
       padding-bottom: 4px;
       border-bottom: 2px solid currentcolor;
+
+      @include max-size($small) {
+        border: 0;
+      }
     }
   }
 }
