--- a/src/layout/nav/subNav/_sub-nav.scss
+++ b/src/layout/nav/subNav/_sub-nav.scss
@@ -16,8 +16,7 @@
     display: flex;
     flex-direction: column;
     box-shadow: none;
-    margin-top: 20px;
-    padding-left: 20px;
+    background-color: inherit;
   }
 
   .sub-nav {
@@ -29,7 +28,16 @@
     @include max-size($small) {
       display: flex;
       flex-direction: column;
-      gap: 20px;
+
+      .sub-nav-item:not(.sub-nav-ad) {
+        padding: 12px 40px;
+
+        a {
+          border-bottom: 1px solid $color-gray-60;
+          padding-bottom: 8px;
+          font-size: rem(14px);
+        }
+      }
     }
   }
 
@@ -57,6 +65,11 @@
       background-size: contain;
       background-repeat: no-repeat;
       background-position: top right;
+
+      @include max-size($small) {
+        padding: 32px 20px;
+        margin-top: 12px;
+      }
     }
 
     .ad-heading {
@@ -65,6 +78,10 @@
       left: 24px;
       max-width: 40%;
       font-size: 24px;
+
+      @include max-size($small) {
+        position: static;
+      }
     }
 
     &.background-gray {
