--- a/src/layout/nav/_nav.scss
+++ b/src/layout/nav/_nav.scss
@@ -39,7 +39,7 @@
       border-bottom: 2px solid currentcolor;
 
       @include max-size($small) {
-        border: 0;
+        border-color: transparent;
         background-color: $color-gray-60;
         color: $color-white;
       }
