--- a/src/scss/_menu-burger.scss
+++ b/src/scss/_menu-burger.scss
@@ -12,8 +12,8 @@ $burger-expanded-width: rem(20px);
 
 .menu-burger {
   position: absolute;
-  top: 20px;
-  left: 20px;
+  top: 28px;
+  right: 28px;
 
   &.btn-ghost {
     &:hover,
