--- a/src/adminLayout/_admin-layout.scss
+++ b/src/adminLayout/_admin-layout.scss
@@ -6,6 +6,10 @@
 }
 
 .admin-container {
+  .main-header-container {
+    border: 0;
+  }
+
   .main {
     display: flex;
     height: calc(100svh - $header-height);
