--- a/src/layout/nav/subNav/_sub-nav.scss
+++ b/src/layout/nav/subNav/_sub-nav.scss
@@ -11,8 +11,22 @@
   justify-content: center;
   display: none;
 
+  @include min-size($medium) {
+    overflow: hidden;
+    max-height: 0;
+    opacity: 0;
+    transform: translateY(-10px);
+    pointer-events: none;
+  }
+
+  @include transition;
+
   &.shown {
     display: flex;
+    max-height: 500px;
+    opacity: 1;
+    transform: translateY(0);
+    pointer-events: auto;
   }
 
   @include max-size($small) {
