--- a/src/scss/_page.scss
+++ b/src/scss/_page.scss
@@ -26,3 +26,16 @@
 .page-medium {
   max-width: $page-width-medium;
 }
+
+.top-img {
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  min-height: 400px;
+}
+
+.kids-page {
+  .top-img {
+    background-image: url('/images/kids/kid_banner.jpg');
+  }
+}
