--- a/src/pages/pageContainer/_page-container.scss
+++ b/src/pages/pageContainer/_page-container.scss
@@ -42,3 +42,26 @@
     padding: 12px;
   }
 }
+
+.breadcrumbs {
+  color: $color-gray-70;
+  display: flex;
+  align-items: center;
+  font-size: rem(16px);
+
+  svg {
+    width: rem(16px);
+    margin: 0 12px;
+  }
+
+  a {
+    color: currentcolor;
+    display: flex;
+  }
+
+  span:last-child {
+    a {
+      color: $color-gray-60;
+    }
+  }
+}
