--- a/src/pages/pageContainer/_page-container.scss
+++ b/src/pages/pageContainer/_page-container.scss
@@ -59,9 +59,7 @@
     display: flex;
   }
 
-  span:last-child {
-    a {
-      color: $color-gray-60;
-    }
+  [aria-current] {
+    color: $color-gray-60;
   }
 }
