--- a/src/pages/pageContainer/_page-container.scss
+++ b/src/pages/pageContainer/_page-container.scss
@@ -14,7 +14,7 @@
   justify-content: space-between;
   width: 100%;
   align-items: flex-end;
-  margin-bottom: 16px;
+  margin-block: 24px 12px;
 
   @include max-size($small) {
     flex-direction: column;
@@ -40,27 +40,5 @@
   @include max-size($medium) {
     max-height: 100%;
     padding: 12px;
-  }
-}
-
-.breadcrumbs {
-  color: $color-gray-70;
-  display: flex;
-  align-items: center;
-  font-size: rem(16px);
-
-  svg {
-    width: rem(16px);
-    margin: 0 12px;
-    stroke: $color-gray-70;
-  }
-
-  a {
-    color: currentcolor;
-    display: flex;
-  }
-
-  [aria-current] {
-    color: $color-gray-60;
   }
 }
