--- a/src/scss/_page.scss
+++ b/src/scss/_page.scss
@@ -26,3 +26,18 @@
 .page-medium {
   max-width: $page-width-medium;
 }
+
+// Products pages
+
+.product-page-container {
+  display: flex;
+
+  .left-panel {
+    min-width: rem(200px);
+  }
+}
+
+.product-container {
+  display: flex;
+  gap: 20px;
+}
