--- a/src/pages/pageContainer/_page-container.scss
+++ b/src/pages/pageContainer/_page-container.scss
@@ -7,6 +7,7 @@
 
 .main-page-header {
   width: 100%;
+  margin-block: 24px 12px;
 }
 
 .page-header {
@@ -14,7 +15,7 @@
   justify-content: space-between;
   width: 100%;
   align-items: flex-end;
-  margin-block: 24px 12px;
+  margin: 12px 0;
 
   @include max-size($small) {
     flex-direction: column;
