--- a/src/components/loader/_loader.scss
+++ b/src/components/loader/_loader.scss
@@ -1,10 +1,10 @@
 .spinner {
   display: flex;
-  width: 16px;
-  height: 16px;
+  width: 24px;
+  height: 24px;
   border-radius: 50%;
-  background-color: conic-gradient(#0000 10%, #706f6f);
-  mask: radial-gradient(farthest-side, #0000 calc(100% - 1.8px), #000 0);
+  background: conic-gradient(#0000 10%, #706f6f);
+  mask: radial-gradient(farthest-side, #0000 calc(100% - 2.5px), #000 0);
   animation: spinner 1s infinite linear;
 }
 
