--- a/src/components/sortTable/_table.scss
+++ b/src/components/sortTable/_table.scss
@@ -141,16 +141,16 @@ table {
     }
 
     img {
-      max-width: rem(120px);
-      min-width: rem(120px);
-      height: rem(64px);
+      max-width: rem(136px);
+      min-width: rem(136px);
+      height: rem(96px);
       object-fit: cover;
-      object-position: top;
+      object-position: center;
     }
 
     .missing-img {
-      max-width: rem(120px);
-      min-width: rem(120px);
+      max-width: rem(136px);
+      min-width: rem(136px);
       height: auto;
       padding: 8px 0;
       margin: 0;
