components.scss file new

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,7 @@
 @forward 'page';
 @forward 'buttons';
 @forward 'helper_classes';
+@forward 'components';
 @forward 'popup';
 @forward 'animation';
 @forward 'error';
