--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -1,1 +1,29 @@
 @use './globals' as *;
+
+.option-icon {
+  width: 24px;
+  height: 24px;
+  border-radius: 4px;
+  border: 1px solid transparent;
+}
+
+.footer {
+  display: flex;
+  gap: 12px;
+  margin-top: 12px;
+}
+
+.separator {
+  width: 100%;
+  height: 1px;
+  display: flex;
+  background-color: $color-gray-80;
+}
+
+.page-small {
+  max-width: $page-width-small;
+}
+
+.page-medium {
+  max-width: $page-width-medium;
+}
