--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -1,10 +1,20 @@
 @use './globals' as *;
 
-.option-icon {
+.color-list {
+  display: flex;
+  gap: 8px;
+}
+
+.option-box {
   width: 24px;
   height: 24px;
   border-radius: 4px;
   border: 1px solid transparent;
+
+  &.small {
+    width: 12px;
+    height: 12px;
+  }
 }
 
 .footer {
