--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -3,17 +3,22 @@
 .color-list {
   display: flex;
   gap: 8px;
-}
 
-.option-box {
-  width: 24px;
-  height: 24px;
-  border-radius: 4px;
-  border: 1px solid transparent;
+  .option-box {
+    width: 24px;
+    height: 24px;
+    border-radius: 4px;
+    border: 1px solid transparent;
+  }
 
   &.small {
-    width: 12px;
-    height: 12px;
+    gap: 4px;
+
+    .option-box {
+      width: 8px;
+      height: 8px;
+      border-radius: 0;
+    }
   }
 }
 
