--- a/src/scss/_page.scss
+++ b/src/scss/_page.scss
@@ -91,10 +91,14 @@
   }
 }
 
+.img-container {
+  position: relative;
+}
+
 .product-card-list {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 8px 0;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 12px 0;
 }
 
 .product-card-content {
@@ -106,6 +110,10 @@
     max-height: 12px;
   }
 
+  .text-line-through {
+    font-size: rem(12px);
+  }
+
   .product-card-title {
     font-size: rem(16px);
     font-family: $font-primary-bold;
@@ -114,6 +122,31 @@
 
 .product-card-img {
   border-radius: 0;
-  height: rem(432px);
+  height: rem(512px);
+  width: 100%;
   object-fit: cover;
+}
+
+.product-badge {
+  position: absolute;
+  z-index: 2;
+  left: 12px;
+  bottom: 12px;
+  background: $color-red-30;
+  color: #fff;
+  display: flex;
+  padding: 4px 8px;
+  border-radius: 2px;
+}
+
+.product-favorite-icon {
+  display: flex;
+  padding: 12px;
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  border-radius: 8px;
+  align-items: center;
+  justify-content: center;
+  background: rgb(250 250 250 / 60%);
 }
