--- a/src/components/favorites/_favorites.scss
+++ b/src/components/favorites/_favorites.scss
@@ -1,5 +1,5 @@
 /* HeartButton.css */
-.heart-button {
+.heart-icon {
   font-size: 2rem;
   background: none;
   border: none;
@@ -7,7 +7,7 @@
   transition: transform 0.2s ease;
 }
 
-.heart-button.animate {
+.heart-icon.animate {
   animation: heartbeat 0.3s ease;
 }
 
@@ -17,11 +17,11 @@
   }
 
   30% {
-    transform: scale(1.4);
+    transform: scale(0.95);
   }
 
   60% {
-    transform: scale(0.95);
+    transform: scale(1.4);
   }
 
   100% {
@@ -29,6 +29,11 @@
   }
 }
 
-.heart-button.liked {
-  color: red;
+.checkbox-item {
+  &:has(input:checked) {
+    .heart-icon {
+      fill: red;
+      stroke: red;
+    }
+  }
 }
