--- a/src/components/favorites/_favorites.scss
+++ b/src/components/favorites/_favorites.scss
@@ -9,6 +9,30 @@
 
 .heart-icon.animate {
   animation: heartbeat 0.3s ease;
+  fill: red;
+  stroke: red;
+}
+
+.heart-icon.animate-back {
+  animation: heartbeatback 0.3s ease;
+}
+
+@keyframes heartbeatback {
+  0% {
+    transform: scale(1);
+  }
+
+  30% {
+    transform: scale(1.4);
+  }
+
+  60% {
+    transform: scale(0.95);
+  }
+
+  100% {
+    transform: scale(1);
+  }
 }
 
 @keyframes heartbeat {
