color names update

--- a/src/pages/home/_hero.scss
+++ b/src/pages/home/_hero.scss
@@ -55,7 +55,7 @@
 
   .hero-btn-decoration {
     height: 2px;
-    background: $color-red-30;
+    background: $color-dust-red-20;
     width: 100%;
   }
 
