--- a/src/pages/home/fashionGrid/_fashion-grid.scss
+++ b/src/pages/home/fashionGrid/_fashion-grid.scss
@@ -65,7 +65,7 @@
       width: 100%;
       display: flex;
       font-size: rem(16px);
-      color: $color-red-40;
+      color: $color-dust-red-40;
       justify-content: flex-end;
     }
   }
