--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -72,7 +72,7 @@ h3 {
 
 a {
   text-decoration: none;
-  color: $color-red-30;
+  color: $color-dust-red-20;
 
   &:focus-visible {
     outline: 2px solid currentcolor;
