--- a/src/scss/_page.scss
+++ b/src/scss/_page.scss
@@ -132,7 +132,7 @@
   z-index: 2;
   left: 12px;
   bottom: 12px;
-  background: $color-red-30;
+  background: $color-dust-red-20;
   color: #fff;
   display: flex;
   padding: 4px 8px;
