--- a/src/components/favorites/_favorites.scss
+++ b/src/components/favorites/_favorites.scss
@@ -1,4 +1,5 @@
-/* HeartButton.css */
+@use '../../scss/globals' as *;
+
 .heart-icon {
   font-size: 2rem;
   background: none;
@@ -9,12 +10,14 @@
 
 .heart-icon.animate {
   animation: heartbeat 0.3s ease;
-  fill: red;
-  stroke: red;
+  fill: $color-red-10;
+  stroke: $color-red-10;
+
+  @include animation(heartbeat);
 }
 
 .heart-icon.animate-back {
-  animation: heartbeatback 0.3s ease;
+  @include animation(heartbeatback);
 }
 
 @keyframes heartbeatback {
@@ -53,11 +56,11 @@
   }
 }
 
-.checkbox-item {
+.favorites {
   &:has(input:checked) {
     .heart-icon {
-      fill: red;
-      stroke: red;
+      fill: $color-red-10;
+      stroke: $color-red-10;
     }
   }
 }
