--- a/src/components/favorites/_favorites.scss
+++ b/src/components/favorites/_favorites.scss
@@ -1,6 +1,20 @@
 @use '../../scss/globals' as *;
 
 .favorites {
+  .favorites-label {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    display: flex;
+    padding: 12px;
+    font-size: 0;
+    border-radius: 8px;
+    align-items: center;
+    justify-content: center;
+    background: rgb(250 250 250 / 60%);
+    cursor: pointer;
+  }
+
   .heart-icon {
     font-size: 2rem;
     background: none;
@@ -10,8 +24,6 @@
 
     &.animate {
       animation: heartbeat 0.3s ease;
-      fill: $color-red-10;
-      stroke: $color-red-10;
     }
 
     &.animate-back {
