panel on collection

--- a/src/pages/collections/_collection-page.scss
+++ b/src/pages/collections/_collection-page.scss
@@ -136,6 +136,10 @@
   justify-content: space-between;
   margin-block: 8px 24px;
 
+  .toggle-panel {
+    max-width: rem(300px);
+  }
+
   .product-views-container,
   .product-filter {
     display: flex;
