--- a/src/scss/utilities.scss
+++ b/src/scss/utilities.scss
@@ -89,3 +89,9 @@
   background-color: transparent;
   color: $color-danger;
 }
+
+.btn-close {
+  position: absolute;
+  right: 9px;
+  top: 12px;
+}
