--- a/src/components/skeleton/_skeleton.scss
+++ b/src/components/skeleton/_skeleton.scss
@@ -28,8 +28,8 @@
   display: flex;
 
   &.skeleton-img {
-    height: 8rem;
-    width: 12rem;
+    width: 100%;
+    height: rem(600px);
   }
 
   &.skeleton-primary {
