--- a/src/scss/globals/_functions.scss
+++ b/src/scss/globals/_functions.scss
@@ -1,5 +1,11 @@
-$base-font-size: 16px; // Basefont
+@use 'sass:math';
+
+$base-font-size: 16px;
 
 @function rem($px-val) {
-  @return calc($px-val / $base-font-size) * 1rem;
+  @if math.is-unitless($px-val) {
+    $px-val: $px-val * 1px;
+  }
+
+  @return math.div($px-val, $base-font-size) * 1rem;
 }
