--- a/src/pages/collections/_collection-page.scss
+++ b/src/pages/collections/_collection-page.scss
@@ -221,6 +221,7 @@
   flex-direction: column;
   gap: 4px;
   margin-block: 8px 16px;
+  font-size: rem(16px);
 
   .color-list {
     max-height: 12px;
@@ -228,6 +229,12 @@
 
   .text-line-through {
     font-size: rem(12px);
+    color: $color-primary;
+  }
+
+  .product-discont-price {
+    color: $color-red-15;
+    font-family: $font-primary-bold;
   }
 
   .product-card-title {
